added ROC curve to main

--- a/main.ipynb
+++ b/main.ipynb
@@ -45,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -71,15 +73,6 @@
     "for assoc in ogaf.associations:\n",
     "    for syn in assoc.DB_Synonym:\n",
     "        lookup_terms[syn].add(assoc.GO_ID)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lookup_terms"
    ]
   },
   {
@@ -198,7 +191,7 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "model = LogisticRegression()"
+    "model = LogisticRegression(solver='lbfgs')"
    ]
   },
   {
@@ -359,7 +352,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from matplotlib import pyplot\n",
+    "# generate a no skill prediction (majority class)\n",
+    "ns_probs = [0 for _ in range(len(Y))]\n",
+    "# predict probabilities\n",
+    "lr_probs = model.predict_proba(X)\n",
+    "# keep probabilities for the positive outcome only\n",
+    "lr_probs = lr_probs[:, 1]\n",
+    "# calculate scores\n",
+    "ns_auc = roc_auc_score(Y, ns_probs)\n",
+    "lr_auc = roc_auc_score(Y, lr_probs)\n",
+    "# summarize scores\n",
+    "print('Baseline: ROC AUC=%.3f' % (ns_auc))\n",
+    "print('Logistic: ROC AUC=%.3f' % (lr_auc))\n",
+    "# calculate roc curves\n",
+    "ns_fpr, ns_tpr, _ = roc_curve(Y, ns_probs)\n",
+    "lr_fpr, lr_tpr, _ = roc_curve(Y, lr_probs)\n",
+    "base_fpr, base_tpr, _ = roc_curve(Y, standard_model)\n",
+    "# plot the roc curve for the model\n",
+    "pyplot.plot(ns_fpr, ns_tpr, linestyle='--', label='Baseline')\n",
+    "pyplot.plot(lr_fpr, lr_tpr, marker='.', label='Logistic')\n",
+    "pyplot.plot(base_fpr, base_tpr, marker='+', label='Standard')\n",
+    "# axis labels\n",
+    "pyplot.xlabel('False Positive Rate')\n",
+    "pyplot.ylabel('True Positive Rate')\n",
+    "# show the legend\n",
+    "pyplot.legend()\n",
+    "# show the plot\n",
+    "pyplot.show()"
+   ]
   }
  ],
  "metadata": {
