--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 182,
    "metadata": {
     "scrolled": true
    },
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HMS:0:00:02.283121  91,452 annotations READ: goa_yeast.gaf \n"
+      "HMS:0:00:04.747125  91,452 annotations READ: goa_yeast.gaf \n"
      ]
     }
    ],
@@ -64,25 +64,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ntgafobj(DB='UniProtKB', DB_ID='A0A023PYF4', DB_Symbol='YER145C-A', Qualifier=set(), GO_ID='GO:0005575', DB_Reference={'GO_REF:0000015'}, Evidence_Code='ND', With_From=set(), NS='CC', DB_Name={'Uncharacterized protein YER145C-A'}, DB_Synonym={'YER145C-A'}, DB_Type='protein', Taxon=[559292], Date=datetime.date(2003, 7, 30), Assigned_By='SGD', Extension=None, Gene_Product_Form_ID=set())"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from goatools.gosubdag.gosubdag import GoSubDag\n",
-    "GO_ID = 'GO:1900472'  # regulation of metabolic process\n",
-    "optional_relationships = {'regulates', 'negatively_regulates', 'positively_regulates'}\n",
-    "\n",
-    "gosubdag_r1 = GoSubDag([GO_ID], godag, relationships=optional_relationships, prt=None)\n",
-    "# print(gosubdag_r1.rcntobj.go2parents)\n",
-    "# print('{GO} ancestors: {P}'.format(\n",
-    "#     GO=GO_ID,\n",
-    "#     P=gosubdag_r1.rcntobj.go2parents[GO_ID]))\n",
-    "gg = gosubdag_r1.rcntobj.go2parents.get(GO_ID)"
+    "ogaf.associations[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,41 +97,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17435"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lookup_terms.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17435"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lookup_terms.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go_ids = set()\n",
+    "for v in lookup_terms.values():\n",
+    "    for go_id in v:\n",
+    "        go_ids.add(go_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gosubdag_r1 = GoSubDag(go_ids, godag, relationships=optional_relationships, prt=None)\n",
+    "parents = gosubdag_r1.rcntobj.go2parents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in lookup_terms.keys():\n",
+    "    parents_go_ids = set()\n",
+    "    for go_id in lookup_terms.get(k):\n",
+    "        parents_go_ids.update(parents.get(go_id))\n",
+    "    lookup_terms[k].update(parents_go_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17435"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lookup_terms.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17435"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lookup_terms.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "working on 0/134274\n"
+      "Error YIL168W\n",
+      "Error YIL170W\n"
      ]
     }
    ],
    "source": [
     "terms = defaultdict(set)\n",
     "gene_pairs = pairs_terms.index.values\n",
+    "gens_terms = {}\n",
     "for idx, pair in enumerate(gene_pairs):\n",
-    "    if idx > 10:\n",
-    "        break\n",
-    "    if idx % 1000 == 0:\n",
-    "        print(\"working on {}/{}\".format(idx, len(gene_pairs)))\n",
+    "#     if idx % 1000 == 0:\n",
+    "#         print(\"working on {}/{}\".format(idx, len(gene_pairs)))\n",
     "    for gene in pair.split(\"$\"):\n",
     "        go_ids = lookup_terms.get(gene)\n",
     "        if go_ids is None:\n",
     "            print(\"Error\", gene)\n",
     "        else:\n",
     "            for go_id in go_ids:\n",
-    "                gosubdag_r1 = GoSubDag([go_id], godag, relationships=optional_relationships, prt=None)\n",
-    "                parents = gosubdag_r1.rcntobj.go2parents\n",
     "                term = godag.get(go_id)\n",
     "                if term.namespace == 'biological_process':\n",
     "                    terms[go_id].add(pair)\n",
-    "                for g in parents:\n",
-    "                    term = godag.get(g)\n",
-    "                    if term is not None:\n",
-    "                        if term.namespace == 'biological_process':\n",
-    "                            terms[g].add(pair)"
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for go_id in terms.keys():\n",
+    "    gosubdag_r1 = GoSubDag([go_id], godag, relationships=optional_relationships, prt=None)\n",
+    "    parents = gosubdag_r1.rcntobj.go2parents\n",
+    "    term = godag.get(go_id)"
    ]
   },
   {
@@ -979,18 +1102,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.5"
   }
  },
  "nbformat": 4,
