before night run
Includes accounting for existing GO terms

--- a/main_v2.ipynb
+++ b/main_v2.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,6 @@
     "            else:\n",
     "                gene2terms[gene] = {}\n",
     "                for go_id in go_ids:\n",
-    "                    go_id = 'GO:0050807'\n",
     "                    term = godag.get(go_id)\n",
     "                    if term.namespace == 'biological_process':\n",
     "                        # Create a subset of the GO DAG which contains:\n",
@@ -110,12 +109,18 @@
     "                            dict_anc = gosubdag.go2nt[p_go]._asdict()\n",
     "                            ancestors[dict_anc['depth']].add(dict_anc['GO'])\n",
     "                        #Get the leaf GO term\n",
-    "                        gene2terms[gene][go_id] = 1\n",
+    "                        if go_id not in gene2terms[gene]:\n",
+    "                            gene2terms[gene][go_id] = 1\n",
+    "                        else:\n",
+    "                            gene2terms[gene][go_id] += 1\n",
     "                        #Sum up\n",
     "                        count_genes = 1  \n",
     "                        for level in range(len(ancestors) - 1, -1, -1):\n",
     "                            for GO in ancestors[level]:\n",
-    "                                gene2terms[gene][GO] = count_genes\n",
+    "                                if GO not in gene2terms[gene]:\n",
+    "                                    gene2terms[gene][GO] = count_genes\n",
+    "                                else:\n",
+    "                                    gene2terms[gene][GO] += count_genes                                \n",
     "                            count_genes += len(ancestors[level])  \n",
     "                        \n",
     "    #Build the combination of the 2 genes\n",
@@ -128,77 +133,16 @@
     "    genesdict['sl'] = row['sl']\n",
     "    #Add the final line and clean NaN\n",
     "    genes2terms = genes2terms.append(genesdict, ignore_index=True)\n",
-    "    genes2terms = genes2terms.fillna(0)\n",
-    "    break"
+    "    genes2terms = genes2terms.fillna(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GO:0008150</th>\n",
-       "      <th>GO:0050789</th>\n",
-       "      <th>GO:0050794</th>\n",
-       "      <th>GO:0050807</th>\n",
-       "      <th>GO:0051128</th>\n",
-       "      <th>GO:0065007</th>\n",
-       "      <th>genes</th>\n",
-       "      <th>sl</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>YAL002W$YAL011W</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   GO:0008150  GO:0050789  GO:0050794  GO:0050807  GO:0051128  GO:0065007  \\\n",
-       "0        10.0         6.0         4.0         2.0         2.0         8.0   \n",
-       "\n",
-       "             genes   sl  \n",
-       "0  YAL002W$YAL011W  0.0  "
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "genes2terms"
+    "genes2terms.to_pickle(\"genes2terms.pkl\")"
    ]
   },
   {
@@ -966,24 +910,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'tt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-131-a1460af11bcf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mgg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'zin'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'kk'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'zin'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'kk'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mgg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'zin'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tt'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mgg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'tt'"
+     ]
     }
    ],
    "source": [
     "gg = {}\n",
     "gg['zin'] = {'kk':1}\n",
-    "'zin' in gg"
+    "gg['zin']['kk'] += 1\n",
+    "gg['zin']['tt'] += 1\n",
+    "gg"
    ]
   },
   {
