handle no father cases

--- a/main_v2.ipynb
+++ b/main_v2.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,15 +105,16 @@
     "                        # The selected GO term and the 'is_a' GO terms above it, by setting relationships=False\n",
     "                        gosubdag = GoSubDag(go_id, godag, relationships=False, prt=False) \n",
     "                        ancestors = defaultdict(set)\n",
-    "                        for p_go in gosubdag.rcntobj.go2parents[go_id]:\n",
-    "                            dict_anc = gosubdag.go2nt[p_go]._asdict()\n",
-    "                            ancestors[dict_anc['depth']].add(dict_anc['GO'])\n",
+    "                        if go_id in gosubdag.rcntobj.go2parents:\n",
+    "                            for p_go in gosubdag.rcntobj.go2parents[go_id]:\n",
+    "                                dict_anc = gosubdag.go2nt[p_go]._asdict()\n",
+    "                                ancestors[dict_anc['depth']].add(dict_anc['GO'])\n",
     "                        #Get the leaf GO term\n",
     "                        if go_id not in gene2terms[gene]:\n",
     "                            gene2terms[gene][go_id] = 1\n",
     "                        else:\n",
     "                            gene2terms[gene][go_id] += 1\n",
-    "                        #Sum up\n",
+    "                        #Sum up all the ancestors values\n",
     "                        count_genes = 1  \n",
     "                        for level in range(len(ancestors) - 1, -1, -1):\n",
     "                            for GO in ancestors[level]:\n",
@@ -253,38 +254,6 @@
     "#gene_pairs.describe()\n",
     "#pairs_terms = pd.concat([gene_pairs, sl_lables, pairs_terms], axis=1)\n",
     "#pairs_terms.head(15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'GafReader' object has no attribute 'get'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-5e8111d1ac85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Now build the hierarchy, meaning each node is represented by the no. of all its descendants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mgogaf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'YAL002W'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'GafReader' object has no attribute 'get'"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "gogaf.get('YAL002W')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for term, pairs in terms.items():\n",
-    "    pairs_terms.loc[pairs, [term]] += 1"
    ]
   },
   {
