another testing - the diff

--- a/main_v2.ipynb
+++ b/main_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HMS:0:00:05.577741  91,452 annotations READ: goa_yeast.gaf \n"
+      "HMS:0:00:02.887993  91,452 annotations READ: goa_yeast.gaf \n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ancestors: \n",
+      " defaultdict(<class 'set'>, {5: {'GO:0016197', 'GO:0071985', 'GO:0045324'}, 0: {'GO:0008150'}, 2: {'GO:0051234', 'GO:0051641'}, 4: {'GO:0007034', 'GO:0016192', 'GO:0046907'}, 3: {'GO:0006810'}, 6: {'GO:0032509'}, 1: {'GO:0051179'}})\n",
+      "ancestors: \n",
+      " defaultdict(<class 'set'>, {4: {'GO:0045184', 'GO:0071702', 'GO:0046907', 'GO:0007034', 'GO:0034613', 'GO:0071705'}, 0: {'GO:0008150'}, 2: {'GO:0033036', 'GO:0051234', 'GO:0051641'}, 8: {'GO:0006886'}, 7: {'GO:0072666', 'GO:0015031'}, 3: {'GO:0070727', 'GO:0006810', 'GO:0008104'}, 6: {'GO:0072594', 'GO:0015833', 'GO:0072665'}, 1: {'GO:0051179'}, 9: {'GO:0006605'}, 5: {'GO:0042886', 'GO:0033365'}})\n",
+      "ancestors: \n",
+      " defaultdict(<class 'set'>, {2: {'GO:0016043'}, 0: {'GO:0008150'}, 1: {'GO:0071840', 'GO:0009987'}, 3: {'GO:0006325'}})\n",
+      "ancestors: \n",
+      " defaultdict(<class 'set'>, {2: {'GO:0016043'}, 0: {'GO:0008150'}, 3: {'GO:0006996'}, 1: {'GO:0071840', 'GO:0009987'}})\n",
+      "ancestors: \n",
+      " defaultdict(<class 'set'>, {0: {'GO:0008150'}, 5: {'GO:0034728', 'GO:0043044'}, 3: {'GO:0043933', 'GO:0006325'}, 1: {'GO:0071840', 'GO:0009987'}, 4: {'GO:0006338', 'GO:0071824'}, 2: {'GO:0016043'}})\n"
+     ]
+    }
+   ],
    "source": [
     "#Now build the hierarchy, meaning each node is represented by the no. of all its descendants\n",
     "genes2terms = pd.DataFrame()\n",
@@ -115,6 +132,7 @@
     "                        else:\n",
     "                            gene2terms[gene][go_id] += 1\n",
     "                        #Sum up all the ancestors values\n",
+    "                        print(\"ancestors: \\n\",ancestors)\n",
     "                        count_genes = 1  \n",
     "                        for level in range(len(ancestors) - 1, -1, -1):\n",
     "                            for GO in ancestors[level]:\n",
@@ -134,7 +152,8 @@
     "    genesdict['sl'] = row['sl']\n",
     "    #Add the final line and clean NaN\n",
     "    genes2terms = genes2terms.append(genesdict, ignore_index=True)\n",
-    "    genes2terms = genes2terms.fillna(0)"
+    "    genes2terms = genes2terms.fillna(0)\n",
+    "    break"
    ]
   },
   {
