--- a/testing.ipynb
+++ b/testing.ipynb
@@ -292,20 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7min 22s, sys: 22.3 s, total: 7min 44s\n",
-      "Wall time: 5min 58s\n"
+      " "
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "%%prun\n",
     "#Now build the hierarchy, meaning each node is represented by the no. of all its descendants\n",
     "genes2terms = pd.DataFrame()\n",
     "gene2terms = {}\n",
@@ -329,7 +328,8 @@
     "                        else:\n",
     "                            gene2terms[gene][go_id] += 1\n",
     "            # Create a subset of the GO DAG which contains:\n",
-    "            # The selected GO term and the 'is_a' GO terms above it, by setting relationships=False\n",
+    "            # The common GO term that'is_a' for the gene, by setting relationships=False\n",
+    "            #print(\"genebiogoid: \\n\",genebiogoid)\n",
     "            gosubdag = GoSubDag(genebiogoid, godag, relationships=False, prt=False) \n",
     "            ancestors = defaultdict(set)\n",
     "            if go_id in gosubdag.rcntobj.go2parents:\n",
@@ -337,6 +337,7 @@
     "                    dict_anc = gosubdag.go2nt[p_go]._asdict()\n",
     "                    ancestors[dict_anc['depth']].add(dict_anc['GO'])                            \n",
     "            #Sum up all the ancestors values\n",
+    "            #print(\"ancestors: \\n\",ancestors)\n",
     "            count_genes = 1  \n",
     "            for level in range(len(ancestors) - 1, -1, -1):\n",
     "                for GO in ancestors[level]:\n",
@@ -358,12 +359,12 @@
     "    genes2terms = genes2terms.fillna(0)\n",
     "    #break\n",
     "    #print(index)\n",
-    "    if index == 1000: break"
+    "    if index == 100: break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -398,16 +399,16 @@
        "      <th>GO:0016043</th>\n",
        "      <th>GO:0016192</th>\n",
        "      <th>...</th>\n",
-       "      <th>GO:0023014</th>\n",
-       "      <th>GO:0031098</th>\n",
-       "      <th>GO:0006817</th>\n",
-       "      <th>GO:0010966</th>\n",
-       "      <th>GO:0006098</th>\n",
-       "      <th>GO:0009052</th>\n",
-       "      <th>GO:0019323</th>\n",
-       "      <th>GO:0060548</th>\n",
-       "      <th>GO:1900102</th>\n",
-       "      <th>GO:1904377</th>\n",
+       "      <th>GO:0000301</th>\n",
+       "      <th>GO:0006890</th>\n",
+       "      <th>GO:0006895</th>\n",
+       "      <th>GO:0032482</th>\n",
+       "      <th>GO:0006906</th>\n",
+       "      <th>GO:0048279</th>\n",
+       "      <th>GO:0048280</th>\n",
+       "      <th>GO:0000272</th>\n",
+       "      <th>GO:0000920</th>\n",
+       "      <th>GO:0006032</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -556,89 +557,17 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>996</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>997</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>998</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>96</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>999</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -652,17 +581,17 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1000</td>\n",
+       "      <td>97</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -674,69 +603,141 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1001 rows × 1780 columns</p>\n",
+       "<p>101 rows × 621 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      GO:0006325  GO:0006338  GO:0006623  GO:0006810  GO:0007029  GO:0007034  \\\n",
-       "0            5.0         4.0         1.0         8.0         1.0         5.0   \n",
-       "1            0.0         0.0         1.0         8.0         0.0         5.0   \n",
-       "2            7.0         1.0         1.0         8.0         0.0         5.0   \n",
-       "3            0.0         0.0         1.0         8.0         0.0         5.0   \n",
-       "4            0.0         0.0         1.0         8.0         0.0         5.0   \n",
-       "...          ...         ...         ...         ...         ...         ...   \n",
-       "996          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "997          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "998          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "999          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "1000         0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "     GO:0006325  GO:0006338  GO:0006623  GO:0006810  GO:0007029  GO:0007034  \\\n",
+       "0           5.0         4.0         1.0         8.0         1.0         5.0   \n",
+       "1           0.0         0.0         1.0         8.0         0.0         5.0   \n",
+       "2           7.0         1.0         1.0         8.0         0.0         5.0   \n",
+       "3           0.0         0.0         1.0         8.0         0.0         5.0   \n",
+       "4           0.0         0.0         1.0         8.0         0.0         5.0   \n",
+       "..          ...         ...         ...         ...         ...         ...   \n",
+       "96          0.0         0.0         1.0         8.0         0.0         5.0   \n",
+       "97          0.0         0.0         1.0         8.0         0.0         5.0   \n",
+       "98          0.0         0.0         1.0         8.0         0.0         5.0   \n",
+       "99          0.0         0.0         1.0         8.0         0.0         5.0   \n",
+       "100         0.0         0.0         1.0         8.0         0.0         5.0   \n",
        "\n",
-       "      GO:0008150  GO:0009987  GO:0016043  GO:0016192  ...  GO:0023014  \\\n",
-       "0           22.0         8.0         7.0         5.0  ...         0.0   \n",
-       "1           12.0         0.0         0.0         5.0  ...         0.0   \n",
-       "2           24.0        10.0         9.0         5.0  ...         0.0   \n",
-       "3           12.0         0.0         0.0         5.0  ...         0.0   \n",
-       "4           12.0         0.0         0.0         5.0  ...         0.0   \n",
-       "...          ...         ...         ...         ...  ...         ...   \n",
-       "996          0.0         0.0         0.0         0.0  ...         0.0   \n",
-       "997         32.0        30.0         0.0         0.0  ...         0.0   \n",
-       "998          0.0         0.0         0.0         0.0  ...         0.0   \n",
-       "999          8.0         6.0         0.0         0.0  ...         0.0   \n",
-       "1000         0.0         0.0         0.0         0.0  ...         0.0   \n",
+       "     GO:0008150  GO:0009987  GO:0016043  GO:0016192  ...  GO:0000301  \\\n",
+       "0          22.0         8.0         7.0         5.0  ...         0.0   \n",
+       "1          12.0         0.0         0.0         5.0  ...         0.0   \n",
+       "2          24.0        10.0         9.0         5.0  ...         0.0   \n",
+       "3          12.0         0.0         0.0         5.0  ...         0.0   \n",
+       "4          12.0         0.0         0.0         5.0  ...         0.0   \n",
+       "..          ...         ...         ...         ...  ...         ...   \n",
+       "96         12.0         0.0         0.0         5.0  ...         0.0   \n",
+       "97         12.0         0.0         0.0         5.0  ...         0.0   \n",
+       "98         12.0         0.0         0.0         5.0  ...         1.0   \n",
+       "99         12.0         0.0         0.0         5.0  ...         0.0   \n",
+       "100        12.0         0.0         0.0         5.0  ...         0.0   \n",
        "\n",
-       "      GO:0031098  GO:0006817  GO:0010966  GO:0006098  GO:0009052  GO:0019323  \\\n",
-       "0            0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "1            0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "2            0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "3            0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "4            0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "...          ...         ...         ...         ...         ...         ...   \n",
-       "996          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "997          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "998          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "999          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "1000         0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "     GO:0006890  GO:0006895  GO:0032482  GO:0006906  GO:0048279  GO:0048280  \\\n",
+       "0           0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "1           0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "2           0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "3           0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "4           0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "..          ...         ...         ...         ...         ...         ...   \n",
+       "96          0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "97          0.0         0.0         0.0         0.0         0.0         0.0   \n",
+       "98          1.0         1.0         1.0         0.0         0.0         0.0   \n",
+       "99          1.0         0.0         0.0         1.0         1.0         1.0   \n",
+       "100         0.0         0.0         0.0         0.0         0.0         0.0   \n",
        "\n",
-       "      GO:0060548  GO:1900102  GO:1904377  \n",
-       "0            0.0         0.0         0.0  \n",
-       "1            0.0         0.0         0.0  \n",
-       "2            0.0         0.0         0.0  \n",
-       "3            0.0         0.0         0.0  \n",
-       "4            0.0         0.0         0.0  \n",
-       "...          ...         ...         ...  \n",
-       "996          0.0         0.0         0.0  \n",
-       "997          0.0         0.0         0.0  \n",
-       "998          1.0         1.0         1.0  \n",
-       "999          0.0         0.0         0.0  \n",
-       "1000         0.0         0.0         0.0  \n",
+       "     GO:0000272  GO:0000920  GO:0006032  \n",
+       "0           0.0         0.0         0.0  \n",
+       "1           0.0         0.0         0.0  \n",
+       "2           0.0         0.0         0.0  \n",
+       "3           0.0         0.0         0.0  \n",
+       "4           0.0         0.0         0.0  \n",
+       "..          ...         ...         ...  \n",
+       "96          0.0         0.0         0.0  \n",
+       "97          0.0         0.0         0.0  \n",
+       "98          0.0         0.0         0.0  \n",
+       "99          0.0         0.0         0.0  \n",
+       "100         1.0         1.0         1.0  \n",
        "\n",
-       "[1001 rows x 1780 columns]"
+       "[101 rows x 621 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
